<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Translation service preferences">

        <EditTextPreference
            app:key="keyTranslate"
            app:title="KEY"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="myMemories"
            app:entries="@array/service_variants"
            app:entryValues="@array/service_values"
            app:key="translName"
            app:title="@string/service_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>